welcome.lessons.welcome.conditions.Conditions.scala.code
if (bestFaceMur()) {
  recule();
} else {
  avance()
}